// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`style @media style 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style Base 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"selector\\":\\"box\\",\\"n_selector\\":{\\"next\\":null,\\"value\\":\\"box\\",\\"matchType\\":0,\\"relation\\":0},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Comma Selector 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"selector\\":\\"box\\",\\"n_selector\\":{\\"next\\":null,\\"value\\":\\"box\\",\\"matchType\\":0,\\"relation\\":0},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0},{\\"selector\\":\\"box-item\\",\\"n_selector\\":{\\"next\\":null,\\"value\\":\\"box-item\\",\\"matchType\\":0,\\"relation\\":0},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Multi Selector 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"selector\\":\\"box-item\\",\\"n_selector\\":{\\"next\\":{\\"next\\":null,\\"value\\":\\"box\\",\\"matchType\\":0,\\"relation\\":0},\\"value\\":\\"box-item\\",\\"matchType\\":0,\\"relation\\":0},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Multi Selector2 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[{\\"selector\\":\\"box-item\\",\\"n_selector\\":{\\"next\\":null,\\"value\\":\\"box-item\\",\\"matchType\\":0,\\"relation\\":1},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":false,\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;

exports[`style Compile Style With Scoped 1`] = `
"
    import {collectStyle} from '@hummer/tenon-vue';
    export default (function(){
      
    var ruleSetMap = {\\"global\\":{\\"classList\\":[]},\\"test\\":{\\"classList\\":[{\\"selector\\":\\"box\\",\\"n_selector\\":{\\"next\\":null,\\"value\\":\\"box\\",\\"matchType\\":0,\\"relation\\":0},\\"style\\":{\\"boxSizing\\":\\"border-box\\"},\\"matchType\\":0}]}};
    var options = {\\"scoped\\":true,\\"id\\":\\"test\\",\\"packageName\\":\\"@hummer/tenon-vue\\"};
  
      return collectStyle(ruleSetMap, options);
    })();
  "
`;
